courses/430_programming-languages/assignment-6/tests/error/hw5_error06.nex
  fun f() : none
  {
   var f : none;
   f();
  }
print "should not get here:n";
1 / 0;
   f();
